UPD: Fixed waybar from clipping when switching workspaces.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -13,12 +13,12 @@
 
 window#waybar {
     background: alpha(@background, 0.85);
-    border-bottom: 0px solid alpha(@main-color, 0.5);
+    border-bottom: 0px solid alpha(@background, 0.85);
 }
 
 #window {
     padding: 2px 10px;
-    margin: 0px 0px 4px 4px;
+    margin: 0px 0px 0px 0px;
     background-color: transparent;
     border-radius: 10px;
     color: lighter(@main-color);
